juniper-from-schema/tests/compile_fail/unsupported_config.stderr
error: Unknown `graphql_schema_from_file` config `foo`
       Supported configs are `error_type` and `context_type`
 --> tests/compile_fail/unsupported_config.rs:6:5
  |
6 |     foo: Foo
  |     ^^^

error[E0405]: cannot find trait `QueryFields` in this scope
  --> tests/compile_fail/unsupported_config.rs:11:6
   |
11 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
